freenode specific index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
 
     <style>
-        .kiwi-sponsor {
+        .fn-sponsor {
             position: absolute;
             z-index: 20;
             bottom: 0px;
@@ -30,15 +30,15 @@
             color: #333333;
         }
 
-        .kiwi-sponsor a {
+        .fn-sponsor a {
             color: #333333;
         }
 
         @media screen and (max-width: 850px) {
-            .kiwi-sponsor, .kiwi-sponsor a {
+            .fn-sponsor, .fn-sponsor a {
                 bottom: -40px;
             }
-            .kiwi-sponsor:hover {
+            .fn-sponsor:hover {
                 background: #fff;
             }
         }
