sidebarDefault config option

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ window.kiwiConfig = function() {
         "startupScreen": "welcome",
         "kiwiServer": "https://kiwi.freenode.net/relay/kiwiirc/",
         "restricted": true,
+        "sidebarDefault": "nicklist",
         "theme": "Default",
         "themes": [
             { "name": "Default", "url": "static/themes/default" },
