Index wording changes

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ window.kiwiConfig = function() {
             "recaptchaSiteId": "6LfbMFoUAAAAAACGY2SGxbZ6R-dCnL1g5lZB2Pei",
             "channel": "",
             "nick": "",
-            "greetingText": "Welcome to freenode IRC",
+            "greetingText": "freenode IRC",
             "infoBackground": "static/plugins/freenode/sunny.jpg",
-            "infoContent": "<img src=\"static/plugins/freenode/fn-logo.svg\"><p>You have stumbled upon the <a href=\"https://kiwiirc.com\">Kiwi</a> Webchat for the freenode project.<br> To learn more about the freenode IRC network, the freenode #live conference and other freenode projects head over to <a href=\"https://freenode.net\">our website</a></p><p></p>",
+            "infoContent": "<img src=\"static/plugins/freenode/fn-logo.svg\"><p>You have stumbled upon the <a href=\"https://kiwiirc.com\">Kiwi</a> Webchat for the freenode project.<br> To learn more about the freenode IRC network, the freenode #live conference and other freenode projects head over to <a href=\"https://freenode.net\">our website</a>.</p><p></p>",
             "allowNoChannel": true,
             "footerText": '<div class="fn-sponsor"><span>Protect your internet with a VPN<br></span>Sponsored by <a href="https://www.privateinternetaccess.com/pages/buy-vpn/freend/">PrivateInternetAccess</a></div>'
         },
